--- a/canvas-drawing.html
+++ b/canvas-drawing.html
@@ -53,7 +53,7 @@
         image.onload = function() {
             context.drawImage(image, 250, 50);
         };
-        image.src = "sky.jpg";
+        image.src = "images/sky.jpg";
         
     </script>
 
